# fediverse-reader-rs

./: Cargo.toml  LICENSE  README.md
db/: subscriptions.json
src/: activitypub.rs  main.rs
