[package]
name = "fediverse-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
anyhow = "1"
reqwest = { version = "^0.11.20", features = ["json", "blocking"] }
serde = { version = "^1.0.200", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32", features = ["rt-multi-thread", "macros"] }
